tests/negative/gold/block-parameter-test.gold
tests/negative/block-parameter-test.toit:6:12: error: Unexpected |
  if true: |x y| print "ok"
           ^
Compilation failed
